--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
         <section>
             <h3 class="sectio-title">What I do</h3>
-            <p id="what-i do" class="section-descripction">I have more than 10 years experience building software for clients all over the world. Below is a quick 
+            <p id="what-i-do" class="section-descripction">I have more than 10 years experience building software for clients all over the world. Below is a quick 
                 overview of my main technical skill sets and technologies i use. Want to find out more about my experience? 
                 Check out my online resume and project portfolio</p>
                 <div class="skills-container">
@@ -117,6 +117,57 @@
                             eget dolor.</p>
                     </div>
                 </div>
+        </section>
+        <section>
+            <h3 class="sectio-title">A summary of My Resume</h3>
+           <div class="resume-container">
+            <div class="resume-coloum">
+                <h3 class="resume-coloum-titlle">My Education</h3>
+                <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                <h3 class="resume-item-institute">Harvard University / 2015 2017</h3>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                    commodo ligula eget dolor.</p>
+                <hr>
+                <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                <h3 class="resume-item-institute">Harvard University / 2015 2017</h3>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                    commodo ligula eget dolor</p>
+                <hr>
+                <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                <h3 class="resume-item-institute">Harvard University / 2015 2017</h3>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                    commodo ligula eget dolor</p>
+            </div>
+            <div class="resume-coloum">
+                <h3 class="resume-coloum-titlle">My Experience</h3>
+                <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                <h3 class="resume-item-institute">Harvard University / 2015 2017</h3>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                    commodo ligula eget dolor.</p>
+                <hr>
+                <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                <h3 class="resume-item-institute">Harvard University / 2015 2017</h3>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                    commodo ligula eget dolor</p>
+                <hr>
+                <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                <h3 class="resume-item-institute">Harvard University / 2015 2017</h3>
+                <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                    commodo ligula eget dolor</p>
+            </div>
+           </div>
         </section>
     </main>
     
