--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
                     commodo ligula eget dolor</p>
             </div>
            </div>
+           <div class="download-cv">
+            <button class="btn-primary">Download CV</button>
+           </div>
         </section>
     </main>
     
