--- a/index.html
+++ b/index.html
@@ -186,7 +186,12 @@
         </div>
         <div class="footer-coloum">
             <h3 class="section-title">Let’s Message me</h3>
-            <p class="section-description"></p>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your name">
+                <input type="email" placeholder="Your email">
+                <textarea name="" id="" placeholder="massege"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
         </div>
     </footer>
     
